// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggle > renders and click on toggle on 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_19_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_19_"
          >
            labelName
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_19_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_0_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      />
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_0_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_m_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_m_"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_m_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_3_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      />
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="styles__adn1w28"
          id="_r_3_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="true"
      class="styles__adn1w29 styles_disabled_true__adn1w2b styles_labelPosition_right__adn1w2d"
      for="_r_6_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      />
      <div
        class="styles__adn1w20 styles_disabled_true__adn1w22 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="styles__adn1w28"
          disabled=""
          id="_r_6_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when required with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_9_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_9_"
          >
            test
          </span>
          <sup
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
          >
            *
          </sup>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_9_"
          name="test"
          required=""
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when required with label left 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_left__adn1w2c"
      for="_r_e_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_e_"
          >
            test
          </span>
          <sup
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
          >
            *
          </sup>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_e_"
          name="test"
          required=""
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with complex label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_16_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span>
            Custom label rendered
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_16_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_12_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_12_"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_12_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_1i_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_1i_"
          >
            This is a label
          </span>
        </div>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
          id="_r_1j_"
        >
          error text
        </span>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_true__adn1w24 styles_size_large__adn1w25"
      >
        <input
          aria-describedby="_r_1j_"
          aria-disabled="false"
          aria-invalid="true"
          class="styles__adn1w28"
          id="_r_1i_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_1d_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_1d_"
          >
            This is a label
          </span>
        </div>
        <span
          class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          id="_r_1e_"
        >
          This is a helper
        </span>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-describedby="_r_1e_"
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_1d_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with labels on left 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_left__adn1w2c"
      for="_r_u_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_u_"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_u_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with non default size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_j_"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      />
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_small__adn1w26"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_j_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_s_"
      aria-describedby="_r_s_"
      class="styles__w40vpo9"
      tabindex="0"
    >
      <label
        aria-disabled="false"
        class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
        for="_r_q_"
      >
        <div
          class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u1j styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
        >
          <div
            class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
            style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
          >
            <span
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_q_"
            >
              This is a label
            </span>
          </div>
        </div>
        <div
          class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="styles__adn1w28"
            id="_r_q_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;
